--- a/hash/views/index.jade
+++ b/hash/views/index.jade
@@ -5,15 +5,15 @@ html
 		link(rel='stylesheet', href='stylesheets/bootstrap-custom.css')
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
 		script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js')
-	body(background='images/images2.png' style='background-repeat: no-repeat;background-position:center;font-family:consolas;background-color:#EEEEEE;')
+	body(background='images/images2.png' style='background-repeat: no-repeat;background-position:center;')
 		.k1
-			.container(style='padding-top:40px;')
+			.container(style='padding-top:40px;padding-left:40px')
 				.n
 					h2
 						span#a Welcome
 						span#b , mah Nigga
 					p(style='position:relative;left:3px;') #{hello}
-					a(href='/bots')
+					a(href='#')
 						button.btn.btn-primary(type='button') Bots
 					a(href='/commands')
 						button.btn.btn-primary(type='button') Commands
