--- a/hash/views/commands.jade
+++ b/hash/views/commands.jade
@@ -5,7 +5,7 @@ html
 		link(rel='stylesheet', href='stylesheets/bootstrap-custom.css')
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
 		script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js')
-	body(background='images/images.png' style='background-repeat: no-repeat;background-position:center;')
+	body(background='images/images2.png' style='background-repeat: no-repeat;background-position:center;font-family:consolas;background-color:#EEEEEE;')
 		.k1
 			.container(style='position:relative;padding-top:50px;padding-left:50px;z-index:1;')
 				.n
@@ -16,14 +16,14 @@ html
 					br
 					form(method="POST" action="/commands")
 						.form-inline
-							input.form-control(type='text' placeholder="... Really Nigga ?" name="com" style="width:200px;")
+							input.form-control(type='text' placeholder="..." name="com" style="width:200px;")
 							button.btn.btn-primary(type='submit' style="left:10px;") ./
 							
 					br
 					p(style="color:gray;") #{hello}
 					
 				.nn(style="position:relative;float:right;")
-					a(href='#')
+					a(href='/bots')
 						button.btn.btn-primary(type='button') Bots
 					br
 					a(href='/commands')
